# advent-of-FPGA-2025

./: README.md
hardcaml_solutions/: dune-project
hardcaml_solutions/_build/: .digest-db  log
hardcaml_solutions/src/: day01.ml  dune
hardcaml_solutions/testing/: acc_sim.ml  dune  test_day01_pt1.ml  test_day01_zd.ml  zd_sim.ml
